--- a/mp-starter/build.gradle
+++ b/mp-starter/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-    compile project(':mp-log')
+    compile project(':mp-common')
     testCompile group: 'junit', name: 'junit', version: '4.12'
-//    compile 'org.springframework.boot:spring-boot-devtools:2.0.0.RELEASE'
 }
