--- a/mp-common/build.gradle
+++ b/mp-common/build.gradle
@@ -1,7 +1,9 @@
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter', version:'2.0.3.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version:'2.0.3.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.0.3.RELEASE'
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.0.3.RELEASE'){
+        exclude(module: 'tomcat-embed-core')
+    }
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version:'2.0.3.RELEASE'
     compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version:'1.9.22'
     compile group: 'mysql', name: 'mysql-connector-java', version:'5.1.46'
@@ -9,6 +11,8 @@ dependencies {
     compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version:'1.1.1'
     compile group: 'com.alibaba', name: 'druid', version:'1.0.28'
     compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.6'
+    //springboot 文件上传
+    compile 'commons-fileupload:commons-fileupload:1.3.1'
     compile group: 'commons-configuration', name: 'commons-configuration', version:'1.10'
     compile group: 'commons-io', name: 'commons-io', version:'2.5'
     compile group: 'org.apache.shiro', name: 'shiro-core', version:'1.3.2'
@@ -40,4 +44,7 @@ dependencies {
     compile 'org.apache.httpcomponents:httpmime:4.5'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'2.0.3.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+
+
 }
