--- a/mp-starter/build.gradle
+++ b/mp-starter/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
     compile project(':mp-common')
+    compile 'org.apache.poi:poi:3.14'
+    compile 'org.apache.poi:poi-ooxml:3.14'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
