--- a/mp-starter/src/main/resources/application-dev.yml
+++ b/mp-starter/src/main/resources/application-dev.yml
@@ -14,8 +14,8 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/CMS_WY?useUnicode=true&characterEncoding=utf8
-#    url: jdbc:mysql://10.10.220.92:3306/CMS_WY?useUnicode=true&characterEncoding=utf8
+#    url: jdbc:mysql://127.0.0.1:3306/CMS_WY?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://10.10.220.92:3306/CMS_WY?useUnicode=true&characterEncoding=utf8
     username: root
     password: mysql
     initialSize: 1
@@ -45,7 +45,7 @@ spring:
 #    type: redis
 
   redis:
-    host: 10.10.220.92
+    host: 127.0.0.1
     port: 7023
     password:
     # 连接超时时间（毫秒）
@@ -56,11 +56,9 @@ spring:
         max-idle: 8
         # 连接池中的最小空闲连接
         min-idle: 1
-#        # 连接池中的最大空闲连接
-#        max-idle: 8
-#        # 连接池中的最小空闲连接
-#        min-idle: 10
-        # 连接池最大连接数（使用负值表示没有限制）
         max-active: 100
         # 连接池最大阻塞等待时间（使用负值表示没有限制）
         max-wait: -1
+biz:
+  analysis:
+    filepath : /tmp/excels
