模版下载完成

--- a/mp-starter/src/main/resources/application-dev.yml
+++ b/mp-starter/src/main/resources/application-dev.yml
@@ -63,3 +63,4 @@ spring:
 biz:
   analysis:
     filepath : /tmp/excels
+    excelspath : /Users/ray/Project/IdeaProjects/CMS/mp-starter/src/main/resources/
